--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -3,14 +3,19 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/fontawesome.min.css" integrity="sha512-J2Gce+WmOttffHOrVKLTlzxIalPXUMDbSfn5ADqp8Vj9EngnjNHr+jjiL3ZB8muEzo+K51gU10X+0eGqGNL7QA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/brands.min.css" integrity="sha512-mXqwRsOznG7CS37KA7CLR1Fc72gfOgp7r8xaVdBKoBKhitcKI/mK+IamtZUf+FAkufXOvVTESu9lPsoQc+kFxg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/solid.min.css" integrity="sha512-SRwBRtvmT+LZLST1GBrRec8GROqtjKU1NK23RKSpdL6IRzn2xPeOfBYSeIlc/9iXYagKB5IX6MyKZF1nq4a1fw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/fontawesome.min.css" integrity="sha512-P9vJUXK+LyvAzj8otTOKzdfF1F3UYVl13+F8Fof8/2QNb8Twd6Vb+VD52I7+87tex9UXxnzPgWA3rH96RExA7A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/brands.min.css" integrity="sha512-sVSECYdnRMezwuq5uAjKQJEcu2wybeAPjU4VJQ9pCRcCY4pIpIw4YMHIOQ0CypfwHRvdSPbH++dA3O4Hihm/LQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/solid.min.css" integrity="sha512-tk4nGrLxft4l30r9ETuejLU0a3d7LwMzj0eXjzc16JQj+5U1IeVoCuGLObRDc3+eQMUcEQY1RIDPGvuA7SNQ2w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
+
   <title>Recipes</title>
+
   <style>
     :root {
       --color-primary: #269fe6;
@@ -22,8 +27,8 @@
 
       --color-white: #fff;
       --color-black: #000;
-      --color-dark-text: #444;
 
+      --color-dark-text: #444;
       --color-info-light: #cce5ff;
       --color-debug-light: #cce5ff;
       --color-success-light: #d4edda;
@@ -57,8 +62,8 @@
     }
 
     * {
-      padding: 0px;
-      margin: 0px;
+      padding: 0;
+      margin: 0;
       box-sizing: border-box;
     }
 
@@ -70,6 +75,7 @@
       font-size: 1.6rem;
       font-family: var(--font-primary);
       background: var(--color-gray-1);
+      color: var(--color-dark-text);
     }
 
     h1,
@@ -116,12 +122,13 @@
       transition: all 300ms ease-in-out;
     }
 
-    .search-button,
-    .search-input {
+    .search-input,
+    .search-button {
       border: none;
       background: none;
       outline: none;
       padding: 1rem;
+      transition: all 300ms ease-in-out;
     }
 
     .search-input {
@@ -137,12 +144,12 @@
 
     .search-button:focus {
       outline: 1px solid var(--color-primary);
-      background: rgba(0, 0, 0, .05);
+      background: rgba(0, 0, 0, .05)
     }
 
     .search-form:focus-within {
       border-color: var(--color-primary);
-      background-color: var(--color-white);
+      background: var(--color-white);
     }
 
     .search-form:focus-within .search-button {
@@ -158,6 +165,110 @@
       grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
       gap: var(--spacing-gutter-large);
     }
-  </style>
 
+    .recipe {
+      background: var(--color-white);
+      box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
+      transform: scale(1);
+      transition: all 300ms ease-in-out;
+      border-radius: .4rem;
+      overflow: hidden;
+    }
+
+    .recipe img {
+      max-width: 100%;
+    }
+
+    .recipe-list-item {
+      max-width: 64rem;
+    }
+
+    .recipe-list-item:hover {
+      transform: scale(1.02);
+      box-shadow: -8px 8px 18px rgba(0, 0, 0, .25);
+    }
+
+    .recipe-title-container {
+      padding: var(--spacing-gutter-medium);
+      padding-bottom: 2rem;
+    }
+
+    .recipe-author {
+      padding: 0 var(--spacing-gutter-medium);
+    }
+
+    .recipe-content {
+      padding: var(--spacing-gutter-medium);
+      padding-top: 2rem;
+    }
+
+    .recipe-author-item {
+      color: var(--color-gray-4);
+      margin-right: 1rem;
+      font-style: italic;
+      font-size: 1.4rem;
+    }
+
+    .recipe-author a {
+      color: var(--color-primary);
+      transition: all 300ms ease-in-out;
+      text-decoration: none;
+    }
+
+    .recipe-author a:hover {
+      color: var(--color-primary-dark);
+    }
+
+    .recipe-meta-container {
+      display: flex;
+      flex-flow: row wrap;
+      padding: var(--spacing-gutter-medium);
+      background: var(--color-gray-1);
+    }
+
+    .recipe-meta {
+      display: flex;
+      flex-flow: column nowrap;
+      flex-shrink: 1;
+      flex-grow: 1;
+      text-align: center;
+    }
+
+    .recipe-meta-title {
+      font-size: 1.6rem;
+    }
+
+    .recipe-footer a {
+      background: var(--color-primary-dark);
+      display: block;
+      color: var(--color-white);
+      text-decoration: none;
+      text-align: center;
+      padding: 1.5rem var(--spacing-gutter-medium);
+      transition: all 300ms ease-in-out;
+    }
+
+    .recipe-footer a:hover {
+      filter: brightness(2);
+    }
+
+    .main-footer {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background: var(--color-primary-dark);
+      color: var(--color-white);
+      padding: var(--spacing-gutter-large);
+    }
+
+    .main-footer a {
+      color: var(--color-white);
+      text-decoration: none;
+      transition: all 300ms ease-in-out;
+    }
+
+    .main-footer a:hover {
+      filter: brightness(.8);
+    }
+  </style>
 </head>
