--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -9,7 +9,7 @@
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user"></i>
-            Otávio Miranda
+            Carlos Augusto
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
